--- a/pubg.qq.com/index.html
+++ b/pubg.qq.com/index.html
@@ -6,10 +6,10 @@
 <meta name="robots" content="all">
 <meta name="author" content="Tencent-TGideas">
 <meta name="copyright" content="Tencent">
-<meta name="Description" content="二中游戏《绝地求生》（PUBG），是一款战术竞技游戏，脑子与枪法一样重要，大吉大利，今晚吃鸡。" />
+<meta name="Description" content="二中游戏《绝地求生》中二吧，是一款战术竞技游戏，脑子与枪法一样重要，大吉大利，今晚吃鸡。" />
 <meta name="Keywords" content="吃鸡,今晚吃鸡,晚上吃鸡一群傻逼的游戏" />
-<title>绝地求生-绝地求生官方网站-腾讯游戏</title>
-<!-- 设计：美美 | 重构：凯文 | 创建：20171114 | 团队博客：tgideas.qq.com -->
+<title>绝地求生-绝地求生官方网站-二中游戏，王佳yao代理，从干事美工</title>
+<title>设计：小美 | 重构：凯文 | 创建：kiilme  <title>
 <link rel="stylesheet" href="css/jquery.fullpage.min.css">
 <link rel="stylesheet" href="css/style.css">
 <script>
@@ -51,18 +51,18 @@
             <li><a href="//pubg.qq.com/" title="官网首页">官网首页</a></li>
             <!-- <li><a href="//pubg.qq.com/webplat/info/news_version3/33247/33250/33268/m19355/list_1.shtml" target="_blank" title="新闻中心" onclick="PTTSendClick('link','news','新闻中心');">新闻中心</a></li> -->
             <li><a href="//pubg.qq.com/web201712/activatelbdj.shtml" title="绑定查询" onclick="PTTSendClick('link','binding','绑定查询');">绑定查询</a></li>
-            <li><a href="//pubg.qq.com/cp/a20171127apply/index0110.shtml" title="国服预约" onclick="PTTSendClick('link','book','国服预约');" class="hot" target="_blank">国服预约</a></li>
-            <li><a href="//pubg.qq.com/act/a20171218lbhg/index.shtml" title="老兵绑定" onclick="PTTSendClick('link','old','老兵绑定');" class="hot" target="_blank">老兵绑定</a></li>
+            <li><a href="//pubg.qq.com/cp/a20171127apply/index0110.shtml" title="国服预约jj" onclick="PTTSendClick('link','book','国服预约');" class="hot" target="_blank">国服预约</a></li>
+            <li><a href="//pubg.qq.com/act/a20171218lbhg/index.shtml" title="老兵绑定jj" onclick="PTTSendClick('link','old','老兵绑定');" class="hot" target="_blank">老兵绑定</a></li>
             <li><a href="//pubg.qq.com/act/a20171114feature/index.html?ADTAG=index.a20171114feature#section2" title="游戏特色" onclick="PTTSendClick('link','feature','游戏特色');">游戏特色</a></li>
             <li><a href="//ipubg.qq.com/" target="_blank" title="社区APP" onclick="PTTSendClick('link','app','社区APP');">社区APP</a></li>
-            <li><a href="http://pubg.qq.com/cp/a20180710pgi/index.shtml" target="_blank" title="PGI赛事" onclick="PTTSendClick('link','wb','PGI赛事');">PGI赛事</a></li>
+            <li><a href="http://pubg.qq.com/cp/a20180710pgi/index.shtml" target="_blank" title="jj赛事" onclick="PTTSendClick('link','wb','PGI赛事');">PGI赛事</a></li>
         </ul> 
         <a href="//pubg.qq.com/main.shtml" class="btn_enter" title="进入官网" onclick="PTTSendClick('link','enter','进入官网');">进入官网</a>        
     </div>
 </div>
 <div id="fullpage">
     <div class="section header active" data-anchor="section1">
-        <h1 class="title sp" style="display:none;">勇者无绝地</h1>
+        <h1 class="title sp" style="display:none;">傻逼无绝地</h1>
         <h2 class="title_sub sp logo_b"><img src="picture/logo_b.png" width="100%" height="100%"></h2>
         <a href="javascript:vplay('player', 'k0512pdroga');" class="link_video sp" title="视频" onclick="PTTSendClick('link','video','视频');">视频</a>
         <div class="code_wrap" style="display:none;">
@@ -95,7 +95,7 @@
                 <a href="javascript:;" class="img_equip5 ui_equip" title="眼镜">眼镜</a>
             </div>
             <div class="equip6 layer" data-depth="0.04">
-                <a href="javascript:;" class="img_equip6 ui_equip" title="口罩">口罩</a>
+                <a href="javascript:;" class="img_equip6 ui_equip" title="奶罩">奶罩</a>
             </div>
             <div class="equip7 layer" data-depth="0.04">
                 <a href="javascript:;" class="img_equip7 ui_equip" title="内衣">内衣</a>
@@ -104,7 +104,7 @@
                 <a href="javascript:;" class="img_equip8 ui_equip" title="外衣">外衣</a>
             </div>
             <div class="equip9 layer" data-depth="0.04">
-                <a href="javascript:;" class="img_equip9 ui_equip" title="手套">手套</a>
+                <a href="javascript:;" class="img_equip9 ui_equip" title="套套">套套</a>
             </div>
             <div class="equip10 layer" data-depth="0.04">
                 <a href="javascript:;" class="img_equip10 ui_equip" title="裤子">裤子</a>
@@ -126,7 +126,7 @@
             <span class="title1 sp layer" data-depth="0.04">大世界</span>
             <span class="title2 sp layer" data-depth="0.03">射击体验</span>
         </h1>
-        <h2 class="title_sub"><span class="layer" data-depth="0.02">真实的射击体验，多种枪械与配件，眼观六路耳听八方</span></h2>
+        <h2 class="title_sub"><span class="layer" data-depth="0.02">真实的jj体验，多种枪械与配件，眼观六路耳听八方</span></h2>
         <div class="weapon_list">
             <div class="ui_line2 sp"></div>
             <div id="tab3" class="snipe fade layer" data-depth="0.02">
