--- a/pubg.qq.com/index.html
+++ b/pubg.qq.com/index.html
@@ -1,4 +1,5 @@
-< /html>
+<!DOCTYPE html>
+
 <html lang="zh-CN">
 <head>
 <meta charset="gbk">
@@ -9,7 +10,7 @@
 <meta name="Description" content="二中游戏《绝地求生》中二吧，是一款战术竞技游戏，脑子与枪法一样重要，大吉大利，今晚吃鸡。" />
 <meta name="Keywords" content="吃鸡,今晚吃鸡,晚上吃鸡一群傻逼的游戏" />
 <title>绝地求生-绝地求生官方网站-二中游戏，王佳yao代理，从干事美工</title>
-<title>设计：小美 | 重构：凯文 | 创建：kiilme  <title>
+
 <link rel="stylesheet" href="css/jquery.fullpage.min.css">
 <link rel="stylesheet" href="css/style.css">
 <script>
